syntax = "proto3";

option go_package = "./pb";

package pb;

message SendUserMsgReq {
  string content_type = 1;   // 内容类型
  int64 send_msg_id = 2;     // 用于服务端去重,客户端去重
  uint64 send_user_id = 4;   // sender user id
  uint64 recv_user_id = 5;   // chat room id
  bytes data = 6;            // payload body
  optional bool is_test = 7; // 是否测试
}

message SendUserMsgResp {}

message SendRoomMsgReq {
  string content_type = 1;   // 内容类型
  int64 send_msg_id = 2;     // 用于服务端去重,客户端去重
  uint64 send_user_id = 4;   // sender user id
  uint64 room_id = 5;        // chat room id
  bytes data = 6;            // payload body
  optional bool is_test = 7; // 是否测试
}

message SendRoomMsgResp {}

message PostMomentsReq {
  string content_type = 1;   // 内容类型
  int64 send_moments_id = 2; // 用于服务端去重,客户端去重
  int64 server_moments_id = 3;
  uint64 user_id = 4;        // sender user id
  bytes data = 5;            // payload body
  optional bool is_test = 6; // 是否测试
}

message PostMomentsResp {}

service message {

  rpc SendUserMsg(SendUserMsgReq) returns (SendUserMsgResp);

  rpc SendRoomMsg(SendRoomMsgReq) returns (SendRoomMsgResp);

  rpc PostMoments(PostMomentsReq) returns (PostMomentsResp);
}